<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/line"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_peach"
    tools:context="edu.mhu.cs.brandonwatkins.careerpoints.ResultsActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtResultsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.15"
        android:text="@string/txtViewResults"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtViewGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewGames"
        android:letterSpacing="0.15"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="98dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:background="@color/dark_blue"
        app:srcCompat="@color/dark_blue"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAppDescription"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.495" />

    <TextView
        android:id="@+id/txtViewAVG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewAVG"
        android:letterSpacing="0.15"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewGames"
        android:layout_marginRight="118dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtAVGs"
        android:layout_width="102dp"
        android:layout_height="370dp"
        android:layout_marginRight="72dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtGames"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtGames"
        android:layout_width="51dp"
        android:layout_height="374dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewGames" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="62dp"
        android:layout_height="52dp"
        app:srcCompat="@drawable/basketballhooplogo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtAppDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtResultsDescription"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtResultsTitle" />

</android.support.constraint.ConstraintLayout>
